CRLF to CR spending.html

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,7 @@
 *.exe
 *.out
 *.app
+spending-forward-fixed.html.notworking3.html
+spending-forward-fixed.html.working01.html
+spending-forward-fixed.html.working02.html
+spending-forward-fixed.html.working03.html
